--- a/Codigo/style.css
+++ b/Codigo/style.css
@@ -2,44 +2,8 @@ html {
   scroll-behavior: smooth;
 }
 
-.brand-logo > img {
-  padding: 5px;
+.dog-card-image {
+  background-size:     cover;
+  background-repeat:   no-repeat;
+  background-position: center center; 
 }
-
-footer a:link {
-  color: white;
-  text-decoration: underline !important;
-}
-footer a:visited {
-  color: white;
-}
-.nav-mobile{
-  font-size: 100px !important;
-}
-
-
-.nav-wrapper{
-  min-height: 100px !important;
-}
-
-
-.dropdown-content{
-  display: none;
-  position: absolute;
-  top: 100px !important;
-}
-
-
-@media only screen and (max-width: 600px) {
-    .parallax-container {
-        height: 150px;
-    }
-    
-}
-
-
-
-
-
-
-
