--- a/src/css/style.css
+++ b/src/css/style.css
@@ -44,3 +44,7 @@ html {
 .uk-navbar-nav>li>a:hover {
     color: #1e87f0 !important;
 }
+
+#boton-donacion:hover {
+    filter: brightness(0.95) !important;
+}
